bacco landing page hidden scrollbar for iframe

--- a/bacco-landingpage/style.css
+++ b/bacco-landingpage/style.css
@@ -26,6 +26,10 @@
   font-family: 'Filson Pro', sans-serif;
 }
 
+body::-webkit-scrollbar {
+  display: none;
+}
+
 a,ul,li{
   list-style: none;
   text-decoration: none;
